# 3DCameraDataAcquisition

./: README.md
HandeyeCalibration/: CMakeLists.txt  ICP.cpp  ICP.h  README.md  main.cpp  test.cpp  util.hpp
Photoneo/: CMakeLists.txt  MinimalPclExample.cpp
VLP16/: README.md
VLP16/VLP16_Test/: CMakeLists.txt
chrischine3DSurface200/: CMakeLists.txt  README.md
chrischine3DSurface200/inc/: 3DCamera.hpp
chrischine3DSurface200/inc/hpp/: Camera.hpp  Frame.hpp  Processing.hpp  System.hpp  Types.hpp
chrischine3DSurface200/inc/hpp/HandEye/: HandEye.hpp  HandEyeInput.hpp
chrischine3DSurface200/lib/windows/: HandEyed.lib
